<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/eventsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_events" />

    <item
        android:id="@+id/resourcesFragment"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_resources" />

    <item
        android:id="@+id/announcementsFragment"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_community" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />

</menu>
